--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -228,7 +228,7 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 4 月 | [錯誤：_由於已啟用區段共用，不允許刪除_](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21790.html) | 新文章 | 了解如何解決「_由於已啟用區段共用，不允許刪除_」錯誤。 |
-| 2023 年 4 月 | [未預期的 AAM UI 存取權](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21831.html) | 新文章 | 了解如何解決使用者有 AAM UI 存取權但沒有特定 AAM 權限的問題。 |
+| 2023 年 4 月 | [未預期的 AAM UI 存取權](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21831.html?lang=zh-Hant) | 新文章 | 了解如何解決使用者有 AAM UI 存取權但沒有特定 AAM 權限的問題。 |
 | 2023 年 4 月 | [大量匯出選項](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21861.html) | 新文章 | 了解如何從 [!DNL Audience Manager] 大量匯出資料。 |
 | 2023 年 4 月 | [LiveRamp 伺服器對伺服器目的地](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21926.html) | 新文章 | 本文概觀了 [!DNL Audience Manager] 中的 [!UICONTROL LiveRamp] 目的地。 |
 
@@ -381,7 +381,7 @@ _已知問題_
 * [Experience Manager 6.5 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-65/deploying/home.html)
 * [Experience Manager 6.4 學習與支援首頁](https://experienceleague.adobe.com/docs/experience-manager-64.html)
 * [舊版 Experience Manager 文件](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/previous-updates/aem-previous-versions.html#previous-updates)
-* [Dynamic Media Classic 說明首頁](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/home.html)
+* [Dynamic Media Classic 說明首頁](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/home.html?lang=zh-Hant)
 * [Experience Manager 文件：最近更新](https://experienceleague.adobe.com/docs/experience-manager-release-information/aem-release-updates/doc-updates/documentation-updates.html#aem-as-a-cloud-service)
 
 +++
