--- a/c-legacy-releases/2023/06072023.md
+++ b/c-legacy-releases/2023/06072023.md
@@ -127,8 +127,8 @@ ht-degree: 99%
 | -----------| ---------- |---------- |
 | 2023 年 6 月 | [擷取資料，從  [!DNL Marketo Engage]](https://experienceleague.adobe.com/docs/platform-learn/tutorials/sources/ingest-data-from-marketo.html) | 影片 | 了解如何使用來源連接器和兩個工作流程，從 [!DNL Marketo Engage] 擷取資料至 [!DNL Real-Time Customer Data Platform] (B2B 版) 和[!DNL Adobe Experience Platform]。 |
 | 2023 年 6 月 | [使用 CRM 來源連接器 (Salesforce) 擷取資料](https://experienceleague.adobe.com/docs/platform-learn/tutorials/sources/ingest-data-from-crm.html) | 影片 | 了解如何以無縫連接方式將 CRM 來源資料批次擷取至[!UICONTROL 即時客戶輪廓]和資料湖。 |
-| 2023 年 6 月 | [在  [!DNL Real-Time CDP]  中使用  [!DNL Target] 區段](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-segments-in-target.html) | 影片 | 了解如何在 Adobe [!DNL Target] 中使用 [!DNL Real-Time Customer Data Platform] 區段，以便在您的網站和行動應用程式上提供個人化體驗。 |
-| 2023 年 6 月 | [啟動區段和輪廓屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html) | 影片 | 了解如何從 [!DNL Real-Time Customer Data Platform] 啟用區段和輪廓至 Adobe [!DNL Target]。 在您的網站、行動應用程式和其他數位屬性顯示即時個人化內容。 |
+| 2023 年 6 月 | [在  [!DNL Real-Time CDP]  中使用  [!DNL Target] 區段](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-segments-in-target.html?lang=zh-Hant) | 影片 | 了解如何在 Adobe [!DNL Target] 中使用 [!DNL Real-Time Customer Data Platform] 區段，以便在您的網站和行動應用程式上提供個人化體驗。 |
+| 2023 年 6 月 | [啟動區段和輪廓屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html?lang=zh-Hant) | 影片 | 了解如何從 [!DNL Real-Time Customer Data Platform] 啟用區段和輪廓至 Adobe [!DNL Target]。 在您的網站、行動應用程式和其他數位屬性顯示即時個人化內容。 |
 | 2023 年 6 月 | [使用標籤進行資料分類](https://experienceleague.adobe.com/docs/platform-learn/tutorials/data-governance/classify-data-using-labels.html) | 影片 | 了解如何在您的結構描述和資料集套用標籤。 資料用途標籤可讓您在 [!DNL Experience Platform] 進行資料標記和分類，以反映公司政策、合約義務、合規性要求和地區法規。 |
 | 2023 年 6 月 | [在 Adobe [!DNL Target]使用 [!DNL Real-Time CDP] 輪廓屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-profile-attributes-in-target.html) | 影片 | 了解如何在 Adobe [!DNL Target] 中使用 [!DNL Real-Time Customer Data Platform] 輪廓屬性，以在您的網站和行動應用程式上提供個人化體驗。 |
 
@@ -147,8 +147,8 @@ New videos, tutorials, or courses published for Adobe [!DNL Real-Time Customer D
 |Published|Name|Type|Description |Applications|
 | -----------| ---------- | ---------- | ---------- |---------- |
 |May 2023|[Configure the [!DNL Adobe Target] destination in [!DNL Real-Time Customer Data Platform]](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/configure-the-target-destination.html)|Video |Learn how to configure the Adobe Target destination in [!DNL Real-Time Customer Data Platform] to start sending segments and profile attributes from [!DNL Real-Time CDP] to [!DNL Adobe Target]. |[!DNL Real-Time CDP], [!DNL Adobe Target] |
-|May 2023|[Share segments and profile attributes](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html)|Video |Learn how to share segments and profile attributes from Adobe [!DNL Real-Time Customer Data Platform] to [!DNL Adobe Target] to display real-time personalized content in your websites, mobile apps, and other digital properties.|[!DNL Adobe Target] |
-|May 2023|[Use Real-time CDP segments in Target](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-segments-in-target.html)|Video |Learn how to use [!DNL Real-Time Customer Data Platform] segments in [!DNL Adobe Target] to deliver personalized experiences on your website and mobile apps.|[!DNL Adobe Target] |
+|May 2023|[Share segments and profile attributes](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html?lang=zh-Hant)|Video |Learn how to share segments and profile attributes from Adobe [!DNL Real-Time Customer Data Platform] to [!DNL Adobe Target] to display real-time personalized content in your websites, mobile apps, and other digital properties.|[!DNL Adobe Target] |
+|May 2023|[Use Real-time CDP segments in Target](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-segments-in-target.html?lang=zh-Hant)|Video |Learn how to use [!DNL Real-Time Customer Data Platform] segments in [!DNL Adobe Target] to deliver personalized experiences on your website and mobile apps.|[!DNL Adobe Target] |
 
 {style="table-layout:auto"}
 
@@ -361,7 +361,7 @@ _已知問題_
 * [Experience Manager Assets Dynamic Media 發行說明](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/release-notes/s7rn2017.html?lang=zh-Hant)
 * [Experience Manager Brand Portal 發行說明](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html?lang=zh-Hant)
 * [Experience Manager 桌面應用程式發行說明](https://experienceleague.adobe.com/docs/experience-manager-desktop-app/using/release-notes.html?lang=zh-Hant)
-* [Experience Manager Dispatcher 發行說明](https://experienceleague.adobe.com/docs/experience-manager-dispatcher/using/getting-started/release-notes.html)
+* [Experience Manager Dispatcher 發行說明](https://experienceleague.adobe.com/docs/experience-manager-dispatcher/using/getting-started/release-notes.html?lang=zh-Hant)
 * [Adobe Primetime 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)
 * [Livefyre 發行說明](https://experienceleague.adobe.com/docs/discontinued/using/livefyre.html?lang=zh-Hant)
 
@@ -374,7 +374,7 @@ _已知問題_
 | 2023 年 6 月 | [AEM Headless 第一次教學課程](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/graphql/headless-first/overview.html) | 影片 | 通過結合 React、Adobe [!DNL Experience Manager]Headless API 和 [!DNL GraphQL] 的強大功能，了解建立動態和互動式 Web 應用程式的過程。 | AEM CS |
 | 2023 年 6 月 | [嵌入 Headless 調適型表單](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/embed-form-spa/introduction.html) | 影片 | 了解在[!UICONTROL 單次頁面申請表]中以 Headless 方式嵌入調適型表單。 | AEM Forms |
 | 2023 年 6 月 | [內容片段主控台](https://experienceleague.adobe.com/docs/experience-manager-learn/content-fragments-console/basics/content-fragments-console.html) | 多部影片 | 了解 [!DNL AEM as a Cloud Service] [!UICONTROL 內容片段]撰寫控制台的基本特性和功能。 | AEM Sites |
-| 2023 年 6 月 | [獲取並以卡片格式顯示表單](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/embed-form-spa/display-forms-card-view.html) | 影片 | 使用 `listForms` API 擷取 Headless 表單，並以卡片格式顯示表單。 | AEM Forms |
+| 2023 年 6 月 | [獲取並以卡片格式顯示表單](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/embed-form-spa/display-forms-card-view.html?lang=zh-Hant) | 影片 | 使用 `listForms` API 擷取 Headless 表單，並以卡片格式顯示表單。 | AEM Forms |
 | 2023 年 6 月 | [Adobe IMS 使用者群組](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/accessing/adobe-ims-user-groups.html) | 影片 | Adobe IMS 使用者群組會建立對 AEM 公開的使用者邏輯集，可供運用以定義更精確的權限。 | AEM CS |
 | 2023 年 6 月 | [Adobe IMS 產品設定檔](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/accessing/adobe-ims-product-profiles.html) | 影片 | Adobe IMS 產品設定檔能提供使用者登入 AEM 作者服務的權限，並根據使用者所屬的產品設定檔提供存取基準。 | AEM CS |
 | 2023 年 6 月 | [GraphQL 影片系列](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/graphql/video-series/modeling-basics.html) | 影片 | 了解如何在 Adobe Experience Manager (AEM) 中定義及使用[!UICONTROL 內容片段]以搭配 GraphQL 使用。 | AEM CS |
@@ -509,10 +509,10 @@ Adobe Commerce 的新文章和現有文章的更新。
 |---------|----|----|-----------|
 | 2023 年 5 月 | [如何防止 Deco-mail 收件人所造成的電子郵件發送緩慢？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21942.html) | 新文章 | 了如何防止 [!UICONTROL Deco-mail] 收件人所造成的電子郵件發送緩慢。 |
 | 2023 年 5 月 | [交付會花多久時間收集追蹤資料？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21990.html) | 新文章 | 了解追蹤資料儲存在伺服器上的時間長度。。 |
-| 2023 年 5 月 | [Adobe Campaign Classic 與 SOCKS5 代理之間的相容性](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22075.html) | 新文章 | 查看是否有可能在 [!DNL Campaign Classic] 中使用 SOCKS5 代理轉移文件。 |
+| 2023 年 5 月 | [Adobe Campaign Classic 與 SOCKS5 代理之間的相容性](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22075.html?lang=zh-Hant) | 新文章 | 查看是否有可能在 [!DNL Campaign Classic] 中使用 SOCKS5 代理轉移文件。 |
 | 2023 年 5 月 | [未找到結構描述定義 - 無法從結構描述錯誤產生](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21964.html) | 新文章 | 了解無法重新起草和發布自訂資源時的解決方案。 |
 | 2023 年 5 月 | [交付會花多久時間收集追蹤資料？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21990.html) | 新文章 | 了解追蹤資料儲存在伺服器上的時間長度。。 |
-| 2023 年 5 月 | [交付失敗且有&#x200B;_訊息佇列 (達到連接配額)_&#x200B;錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22154.html) | 新文章 | 找出交付因&#x200B;_「郵件已加入佇列」(達到連線配額)_ 錯誤而失敗的解決方案。 |
+| 2023 年 5 月 | [交付失敗且有&#x200B;_訊息佇列 (達到連接配額)_&#x200B;錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22154.html?lang=zh-Hant) | 新文章 | 找出交付因&#x200B;_「郵件已加入佇列」(達到連線配額)_ 錯誤而失敗的解決方案。 |
 | 2023 年 5 月 | [有許多伺服器時如何為內部部署執行個體進行升級後續作業](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22055.html) | 新文章 | 了解有許多伺服器時如何為內部部署執行個體進行升級後續作業。 |
 
 {style="table-layout:auto"}
@@ -608,15 +608,15 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 | 2023 年 6 月 | [預設計劃](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/default-programs.html) | 影片 | 了解如何建立和測量您的第一項[!UICONTROL 預設計劃]. |
 | 2023 年 6 月 | [電子郵件計劃](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/email-programs.html) | 影片 | 觀看此步驟式教學課程，了解如何使用 A/B 測試來建立電子郵件計劃。 |
 | 2023 年 6 月 | [參與度計劃](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/engagement-programs.html) | 影片 | 按照此逐步教學課程建置您的第一項參與度計劃。 |
-| 2023 年 6 月 | [活動計劃](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/event-programs.html) | 影片 | 觀看此影片進行基本了解，並建立您的第一項活動計劃。 |
+| 2023 年 6 月 | [活動計劃](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/event-programs.html?lang=zh-Hant) | 影片 | 觀看此影片進行基本了解，並建立您的第一項活動計劃。 |
 | 2023 年 6 月 | [建立活動計劃](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/events/events-watch.html) | 影片 | 了解如何建立商展活動計劃，主要是根據 [!DNL Marketo] 中預先建立的計劃來進行。 |
 | 2023 年 6 月 | [報告與分析](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/reporting/reporting-and-analytics.html) | 影片 | 了解如何導覽 [!DNL Analytics] 和 [!UICONTROL 資料庫]部分，提取 [!DNL Marketo Engage] 中不同的現成可用報表。 |
 | 2023 年 6 月 | [了解 Marketo 計劃和行銷活動](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/fundamentals/programs-and-campaigns.html) | 影片 | 計劃代表一項單一行銷計劃。 了解如何將這些計劃與行動活動一起使用，以各種方式吸引您的客群。 |
-| 2023 年 6 月 | [導覽 Marketo Engage 使用者介面](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/fundamentals/ui-navigation.html) | 影片 | 了解如何導覽使用者介面並熟悉您使用 [!DNL Marketo Engage] 平台的方式。 |
+| 2023 年 6 月 | [導覽 Marketo Engage 使用者介面](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/fundamentals/ui-navigation.html?lang=zh-Hant) | 影片 | 了解如何導覽使用者介面並熟悉您使用 [!DNL Marketo Engage] 平台的方式。 |
 
 {style="table-layout:auto"}
 
-如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/docs/marketo/using/home.html)首頁
+如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/docs/marketo/using/home.html?lang=zh-Hant)首頁
 
 +++
 
@@ -726,7 +726,7 @@ Last updated: **August 9, 2022**
 | 2023 年 6 月 | [即時共同作業](https://experienceleague.adobe.com/docs/document-cloud-learn/acrobat-learning/getting-started/collaborate.html) | 影片 | 隨著遠端工作無所不在，無縫共同作業對於快速和大規模地交付內容至關重要。 隨時隨地即時收集註釋、共同處理回應及追蹤文件的進度，推展您的專案。 | Acrobat Sign |
 | 2023 年 6 月 | [管理表單資料](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/advanced-tasks/advanced-tasks-sending/manage-form-data.html) | 影片 | 了解如何整合文件中的表單資料，以便您可以在報告或 Excel 試算表中檢視和管理資料。 | Acrobat Sign |
 | 2023 年 6 月 | [Acrobat Sign 的身份驗證方法](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/advanced-tasks/advanced-tasks-sending/authentication-methods.html) | 影片 | 了解 Acrobat Sign 可用的各種方法來驗證簽署文件者的身份。 身份驗證有助於減少詐騙，並可為簽名文件增添額外的安全層。 | |
-| 2023 年 6 月 | [新增使用者](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/admin-set-up/getting-started-admin/add-users-to-your-account.html) | 影片 | 了解如何為 Acrobat Sign 新增和管理使用者。使用者管理是在 Admin Console 中進行。 | Acrobat Sign |
+| 2023 年 6 月 | [新增使用者](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/admin-set-up/getting-started-admin/add-users-to-your-account.html?lang=zh-Hant) | 影片 | 了解如何為 Acrobat Sign 新增和管理使用者。使用者管理是在 Admin Console 中進行。 | Acrobat Sign |
 | 2023 年 6 月 | [使用者的報告選項](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/admin-set-up/getting-started-admin/report-options.html) | 影片 | 身為 Acrobat Sign 管理員，了解如何為使用者設定報告選項。 | Acrobat Sign |
 
 {style="table-layout:auto"}
@@ -765,11 +765,11 @@ See [Creative Cloud for enterprise tutorials](https://experienceleague.adobe.com
 
 ## Digital Experience Blueprints {#blueprints}
 
-[Digital Experience Blueprints](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/overview.html) are repeatable implementations that let you address strategy and quickly solve established business problems. Each Blueprint provides a series of artifacts that explain the high-value business problem, architectures, implementation steps, technical considerations, and links to the relevant documentation.
+[Digital Experience Blueprints](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/overview.html?lang=zh-Hant) are repeatable implementations that let you address strategy and quickly solve established business problems. Each Blueprint provides a series of artifacts that explain the high-value business problem, architectures, implementation steps, technical considerations, and links to the relevant documentation.
 
 -->
 
 ## 全新數位體驗藍圖 {#blueprints}
 
-[數位體驗藍圖教學課程](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/overview.html)是可重複實施的內容，可讓您找出處理策略並快速解決既定的業務問題。每個藍圖都提供一系列成品，解釋高價值業務問題、架構、實作步驟、技術考量以及相關文件的連結。
+[數位體驗藍圖教學課程](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/overview.html?lang=zh-Hant)是可重複實施的內容，可讓您找出處理策略並快速解決既定的業務問題。每個藍圖都提供一系列成品，解釋高價值業務問題、架構、實作步驟、技術考量以及相關文件的連結。
 
