Updated by AutoLocalizeURLs.py

--- a/c-legacy-releases/2022/10052022.md
+++ b/c-legacy-releases/2022/10052022.md
@@ -506,7 +506,7 @@ Last updated: **August 9, 2022**
 | 2022 年 10 月 | [設定外部封存](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/admin-set-up/getting-started-admin/set-up-your-external-archive.html?lang=zh-Hant) | 影片 | 了解如何為已簽署的協議備份複本建立外部封存。 | Acrobat Sign |
 | 2022 年 10 月 | [管理並追蹤您的協議](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/getting-started/getting-started-managing/manage-and-track.html?lang=zh-Hant) | 已更新的影片 | 了解如何在 Acrobat Sign 中管理及追蹤為了索取簽名而傳送的文件。 | Acrobat Sign |
 | 2022 年 10 月 | [在 Salesforce 中設定合併對應](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/salesforce/set-up-merging-map.html?lang=zh-Hant) | 已更新的影片 | 了解如何將 Salesforce 中的資料直接合併到 Acrobat Sign 文件中。 | Acrobat Sign |
-| 2022 年 10 月 | [Document Builder for Salesforce](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/salesforce/create-an-agreement-template.html) | 影片 | 了解如何使用 Document Builder for Salesforce 建立可重複使用的文件範本。 | Acrobat Sign |
+| 2022 年 10 月 | [Document Builder for Salesforce](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/salesforce/create-an-agreement-template.html?lang=zh-Hant) | 影片 | 了解如何使用 Document Builder for Salesforce 建立可重複使用的文件範本。 | Acrobat Sign |
 | 2022 年 10 月 | [管理網頁表單資料](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/advanced-tasks/advanced-tasks-managing/manage-webform-data.html?lang=zh-Hant) | 影片 | 了解如何追蹤、管理及匯出網頁表單中的資料。 | Acrobat Sign |
 | 2022 年 10 月 | [Acrobat Sign 中的 Liquid Mode](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/mobile/mobile-tutorials/liquidmode.html?lang=zh-Hant) | 影片 | 了解 Liquid Mode 如何改善行動簽名體驗。 嘗試閱讀和簽署文件時不再需要夾捏和縮放。 | Acrobat Sign |
 | 2022 年 9 月 | [註冊開發人員帳戶](https://experienceleague.adobe.com/docs/document-services/tutorials/acrobatsign/oem/sign-up-developer-account.html?lang=zh-Hant) | 影片 | 在 _Acrobat Sign 嵌入快速入門指南_&#x200B;的第 1 部分中，了解如何註冊 Acrobat Sign API 開發人員帳戶。您的新開發人員帳戶已完整啟用簽署和 API 功能。 | 文件服務 |
