--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -62,7 +62,7 @@ ht-degree: 98%
 
 ## 認證{#certification}
 
-請注意，所有 Adobe 認證候選者！Adobe 很高興地宣布在 Experience League 推出新的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html)網站。
+請注意，所有 Adobe 認證候選者！Adobe 很高興地宣布在 Experience League 推出新的 Experience Cloud [認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=zh-Hant)網站。
 
 +++詳細資料
 
@@ -72,7 +72,7 @@ ht-degree: 98%
 * Adobe 解決方案的認證續約
 * 認證方案更新
 
-及更多內容！前往 Experience League 上的 [Adobe 認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html)，立即開始您的認證之旅！
+及更多內容！前往 Experience League 上的 [Adobe 認證](https://experienceleague.adobe.com/docs/certification/certification/overview.html?lang=zh-Hant)，立即開始您的認證之旅！
 
 +++
 
@@ -84,7 +84,7 @@ ht-degree: 98%
 
 [!DNL Adobe System Status] 會提供有關 Adobe 產品及服務中斷、作業中斷和維護事件的詳細資訊、狀態更新和電子郵件通知。請造訪 [status.adobe.com](https://status.adobe.com/) 來查看。
 
-請參閱 Adobe 狀態的最新[發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/02082023.html#status)。
+請參閱 Adobe 狀態的最新[發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/02082023.html?lang=zh-Hant#status)。
 
 **新增功能**
 
@@ -96,7 +96,7 @@ ht-degree: 98%
 
 {style="table-layout:auto"}
 
-如需最近的更新，請參閱[2023 年 2 月發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/02082023.html#status)。
+如需最近的更新，請參閱[2023 年 2 月發行說明](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/previous/2023/02082023.html?lang=zh-Hant#status)。
 
 +++
 
@@ -171,7 +171,7 @@ _在 3 月未更新。_
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 3 月 | [Analysis Workspace 中的 RTF 編輯器](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/rich-text-editor-in-analysis-workspace.html) | 已更新的影片 | 了解可讓分析師和行銷人員在 Analysis Workspace 中套用編輯到文字視覺效果 (或說明) 的功能：粗體、斜體、標題、超連結等等。 |
+| 2023 年 3 月 | [Analysis Workspace 中的 RTF 編輯器](https://experienceleague.adobe.com/docs/analytics-learn/tutorials/analysis-workspace/visualizations/rich-text-editor-in-analysis-workspace.html?lang=zh-Hant) | 已更新的影片 | 了解可讓分析師和行銷人員在 Analysis Workspace 中套用編輯到文字視覺效果 (或說明) 的功能：粗體、斜體、標題、超連結等等。 |
 
 {style="table-layout:auto"}
 
@@ -205,7 +205,7 @@ _在 3 月未更新。_
 Latest release: **September 22, 2022**
 
 * [!DNL Streaming Media Analytics] [release notes](https://experienceleague.adobe.com/docs/media-analytics/using/release-notes/release-notes.html)
-* [!DNL Streaming Media Analytics] [product documentation and tutorials](https://experienceleague.adobe.com/docs/media-analytics/using/media-overview.html)
+* [!DNL Streaming Media Analytics] [product documentation and tutorials](https://experienceleague.adobe.com/docs/media-analytics/using/media-overview.html?lang=zh-Hant)
 
 ## Audience Manager {#aam}
 
@@ -246,31 +246,31 @@ _新功能_
 _新功能_
 
 * 資產報告現在可讓管理員從 [!DNL Experience Manager Assets] as a [!DNL Cloud Service] 部署[產生資產下載報告](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/admin/asset-reports.html)。此資料可進一步讓管理員從關鍵成功量度取得深入見解，以衡量企業內和客戶對資產的採用程度。
-* [!DNL Experience Manager Assets]除了在連接到 Azure Blob 儲存體資料來源以使用大量匯入工具擷取資產時支援用於驗證的存取金鑰之外，現在還[支援 SAS 權杖](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/add-assets.html#asset-bulk-ingestor)。
+* [!DNL Experience Manager Assets]除了在連接到 Azure Blob 儲存體資料來源以使用大量匯入工具擷取資產時支援用於驗證的存取金鑰之外，現在還[支援 SAS 權杖](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/add-assets.html?lang=zh-Hant#asset-bulk-ingestor)。
 * 改進 Asset Compute 中 CMYK 影像的管理，讓您可以為 CMYK 影像產生智慧型裁切和智慧型標記。
 
 _發行前管道中可用的新功能_
 
-* [!DNL Experience Manager Assets] 現在支援使用大量匯入工具[從 Google Cloud Platform 大規模擷取資產](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/add-assets.html#asset-bulk-ingestor)。
+* [!DNL Experience Manager Assets] 現在支援使用大量匯入工具[從 Google Cloud Platform 大規模擷取資產](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/add-assets.html?lang=zh-Hant#asset-bulk-ingestor)。
 
 ### [!DNL Experience Manager Forms] as a [!DNL Cloud Service]
 
 _新功能_
 
 * **[可產生非互動式 PDF 文件和可列印輸出的工作流程步驟](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/create-form-centric-workflows/aem-forms-workflow-step-reference.html)** - 使用 [!DNL Experience Manager] 工作流程步驟，將業務流程的非互動式 PDF 文件和可列印輸出建立工作自動化，簡化您文件產生程序並節省時間。
-* **[使用腳註在最適化表單中提供引述或額外資訊](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-components-to-an-adaptive-form/footnotes-richtextsupport.html)** - 在最適化表單中使用腳註來顯示有關如何完成或使用表單的資訊。您還可以使用它來提供附加資訊、版權許可和其他有用的資訊。
+* **[使用腳註在最適化表單中提供引述或額外資訊](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/add-components-to-an-adaptive-form/footnotes-richtextsupport.html?lang=zh-Hant)** - 在最適化表單中使用腳註來顯示有關如何完成或使用表單的資訊。您還可以使用它來提供附加資訊、版權許可和其他有用的資訊。
 
 
 _發行前管道中可用的新功能_
 
 * [使用資料擷取核心元件以建置最適化表單](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/adaptive-forms/introduction.html) – [使用最適化表單編輯器](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/creating-adaptive-form-core-components.html)根據標準化的資料擷取元件 (核心元件) 建立表單。這些元件為您的數位註冊體驗提供自訂功能、縮短的開發時間並降低維護成本。
 * [前端管道支援設計以核心元件為基礎之最適化表單的樣式](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/using-themes-in-core-components.html) – 通過使用前端部署管道部署，為以核心元件為基礎之最適化表單使用易於自訂的 BEM 型主題，以增強表單的外觀和風格。
-* [為以核心元件為基礎之最適化表單產生成記錄文件](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/generate-document-of-record-core-components.html) – 為以核心元件為基礎之最適化表單建立記錄，以提交供長期封存，採列印或文件格式。
-* [將最適化表單提交到 Microsoft® SharePoint 和 Microsoft® OneDrive](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/configure-submit-actions-and-metadata-submission/configuring-submit-actions.html) – 簡化資料提交作業，能夠將最適化表單直接傳送到 Microsoft® SharePoint 和 Microsoft® OneDrive。您可以提交具結構描述的資料和無結構描述的資料。這些提交動作是對已經可用的提交動作的補充。
+* [為以核心元件為基礎之最適化表單產生成記錄文件](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/generate-document-of-record-core-components.html?lang=zh-Hant) – 為以核心元件為基礎之最適化表單建立記錄，以提交供長期封存，採列印或文件格式。
+* [將最適化表單提交到 Microsoft® SharePoint 和 Microsoft® OneDrive](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/configure-submit-actions-and-metadata-submission/configuring-submit-actions.html?lang=zh-Hant) – 簡化資料提交作業，能夠將最適化表單直接傳送到 Microsoft® SharePoint 和 Microsoft® OneDrive。您可以提交具結構描述的資料和無結構描述的資料。這些提交動作是對已經可用的提交動作的補充。
 * [使用將最適化表單另存為模板功能來提升表單建置效率](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-an-adaptive-form-on-forms-cs/template-editor.html#save-an-adaptive-form-as-template-saving-adaptive-form-as-template) – 將最適化表單另存為模板，並在建置下一個最適化表單時重複使用模板，藉此簡化表單建置程序。
 * [連接 [!DNL Experience Manager Forms] 到支援 JDBC 的資料庫](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html#configure-relational-database-configure-relational-database) – 輕鬆連接將 [!DNL Experience Manager Forms] 資料模型連接到支援 JDBC 的資料庫，讓您順暢讀寫資料。
 * [使用 Open API 3.0 與 REST 端點相整合](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html#configure-restful-services-open-api-specification-version-20-configure-restful-services-swagger-version30) – 將 [!DNL Experience Manager Forms] as a [!DNL Cloud Service] 表單資料模型連接到支援 Open API 規格版本 3.0 的 REST 端點，讓您輕鬆傳送和接收資料。
-* [共用最適化表單以供審閱](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-reviews-forms.html) – 使用最適化表單審閱機制讓一個或多個人員審閱表單。
+* [共用最適化表單以供審閱](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-foundation-components/create-reviews-forms.html?lang=zh-Hant) – 使用最適化表單審閱機制讓一個或多個人員審閱表單。
 
 ### CIF 附加元件
 
