--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -428,7 +428,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 |---------|--------|---------|---------|
 | 2023 年 4 月 | [品質修補工具 (QPT)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html) | 新文章 | 關於如何套用 QPT 1.1.28、QPT 1.1.29 和 QPT 1.1.30 中可用的修補程式的新文章已發佈，並且可以在其各自區段中找到。 |
 | 2023 年 4 月 | [新網域重新導向到預設網域](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/new-domain-redirecting.html) | 新文章 | 了解如何解決現有或不同環境中新網域重新導向到預設網域的問題。 |
-| 2023 年 4 月 | [當欄位變灰色時，如何變更 Magento.com 帳戶上的電子郵件地址？](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/how-to/change-email-address-on-magento-account.html) | 新文章 | 當欄位變灰色時，如何變更 [Magento.com](https://account.magento.com/customer/account/login) 帳戶上的電子郵件地址？ |
+| 2023 年 4 月 | [當欄位變灰色時，如何變更 Magento.com 帳戶上的電子郵件地址？](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/how-to/change-email-address-on-magento-account.html?lang=zh-Hant) | 新文章 | 當欄位變灰色時，如何變更 [Magento.com](https://account.magento.com/customer/account/login) 帳戶上的電子郵件地址？ |
 
 {style="table-layout:auto"}
 
@@ -455,7 +455,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 請到此處了解 [!DNL Adobe Campaign] 最新功能、改進項目和修正：
 
-在 [Campaign v7](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html)、[Campaign v8](https://experienceleague.adobe.com/docs/campaign/campaign-v8/releases/release-notes.html?lang=zh-Hant) 和 [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html) 發行說明中進一步了解最新功能、改進與修正。
+在 [Campaign v7](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html)、[Campaign v8](https://experienceleague.adobe.com/docs/campaign/campaign-v8/releases/release-notes.html?lang=zh-Hant) 和 [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) 發行說明中進一步了解最新功能、改進與修正。
 
 ### 新 [!DNL Campaign]教學課程 {#tutorials-campaign}
 
@@ -543,7 +543,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 ### Marketo Engage 核心更新
 
 * 如需最新資訊，請參閱 [2023 年 3 月 - 最新發行資訊](https://experienceleague.adobe.com/docs/marketo/using/release-notes/current.html?lang=zh-Hant)
-* 如需最新發行排程資訊和發行說明，請參閱 [!DNL Marketo Engage] [發行排程](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html)。
+* 如需最新發行排程資訊和發行說明，請參閱 [!DNL Marketo Engage] [發行排程](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html?lang=zh-Hant)。
 
 <!-- ### New Marketo tutorials and courses {#tutorials-marketo}
 
@@ -551,11 +551,11 @@ New videos, tutorials, or courses published for Adobe Marketo.
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|August 2022 |[Marketo Engage tutorials](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/overview.html)|Videos |Visit the [Marketo Engage tutorial home](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/overview.html) on Experience League for all past and new tutorials for Marketo Engage.|
+|August 2022 |[Marketo Engage tutorials](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/overview.html?lang=zh-Hant)|Videos |Visit the [Marketo Engage tutorial home](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/overview.html?lang=zh-Hant) on Experience League for all past and new tutorials for Marketo Engage.|
 
 {style="table-layout:auto"} -->
 
-如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/docs/marketo/using/home.html)首頁
+如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/docs/marketo/using/home.html?lang=zh-Hant)首頁
 
 +++
 
@@ -571,26 +571,26 @@ Experience League 上的新的 [!DNL Workfront] 課程與教學課程系列。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 5 月 | [透過版面範本新增和管理圖釘](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/administration-and-setup/layout-templates/add-and-manage-pins-in-layout-template.html) | 影片 | 了解什麼是圖釘以及如何透過版面範本為一組使用者釘選重要或相關的頁面。 |
-| 2023 年 5 月 | [使用 Jira 整合建立可見度](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/integrations/jira/jira.html) | 文章 | 快速看一下 Jira 整合如何讓您查看團隊目前工作情況。 |
-| 2023 年 5 月 | [計算目標進度](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/monitor-goals/calculate-goal-progress.html) | 文章 | 了解如何在 Workfront Goals 中計算目標進度。 |
-| 2023 年 5 月 | [傳達目標狀態](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/monitor-goals/communicate-goal-status.html) | 文章 | 了解如何在 Workfront Goals 中將您目標進度和狀態傳達給他人。 |
-| 2023 年 5 月 | [了解增強型分析中的規劃時數和持續時間檢視](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/8-planned-hours-and-duration-views.html) | 文章 | 在燃盡圖和專案樹狀圖表中，您可以按規劃時數或持續時間查看資訊。 |
-| 2023 年 5 月 | [了解建立專案的四種方法](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/understand-other-ways-to-create-projects.html) | 影片 | 了解如何從範本建立專案、從頭開始建立專案、複製現有專案或匯入 Microsoft® Project 檔案。 |
-| 2023 年 5 月 | [尋找您的專案](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/find-projects.html) | 文章和影片 | 了解如何使用圖釘、我的最愛、儀表板和專案頁面，在 Workfront 中尋找您的專案。 |
-| 2023 年 5 月 | [了解增強型分析的動作 - 懸停、點按並拖曳以及點進](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/9-actions-hover-click-and-drag-and-click-in.html) | 影片 | 了解如何將滑鼠懸停在圖表上來取得更多資訊、在圖表上建立時間範圍，以及顯示其他圖表，全都在增強型分析中進行。 |
-| 2023 年 5 月 | [使用者的資源管理設定](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-resources/resource-management/settings-for-users.html) | 影片 | 了解正確使用資源管理工具所需的使用者設定。 |
-| 2023 年 5 月 | [Workfront Analytics 簡介](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/1-intro-to-workfront-analytics.html) | 影片 | 與增強分析產品經理 Joel Pettigrew 一起了解分析是如何產生的，以及它所帶來的令人興奮的功能。 |
-| 2023 年 5 月 | [更新要求](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/issues-requests/update-a-request.html) | 影片 | 了解如何查找您已提交的請求並在 Workfront 中更新這些請求。 |
-| 2023 年 5 月 | [了解圖表部分](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/monitor-goals/understand-the-graphs-section.html) | 影片 | 了解如何辨讀和解釋 Goals 中的目標健康圖表和目標進度圖表。 |
-| 2023 年 5 月 | [設定 Workfront Fusion 練習檔案](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/fusion/welcome-to-workfront-fusion/set-up-your-fusion-exercise-files-walkthrough.html) | 影片 | 了解如何在 Adobe Workfront Fusion 下載練習檔案，並將這些檔案上傳到 Workfront 的資料夾中。 |
-| 2023 年 5 月 | [共用專案](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/share-a-project.html) | 影片 | 了解如何共用專案，以便利害關係人和對專案感興趣的其他人可以使用 Workfront 查看完成的工作。 |
-| 2023 年 5 月 | [有關要求佇列的常見問題](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/request-queues/request-queue-faq.html) | 文章 | 取得 Workfront 中要求佇列常見問題的答案。 |
-| 2023 年 5 月 | [了解增強型分析中的團隊活動圖表](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/18-activity-by-team-chart.html) | 文章 | 在 Workfront 中了解您組織的主團隊時間使用情況。 |
-| 2023 年 5 月 | [完成目標後關閉目標](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/manage-goals/close-a-goal-once-complete.html) | 影片 | 了解如何使用 [!UICONTROL Goals] 關閉目標。 |
-| 2023 年 5 月 | [了解基本專案建立](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/understand-basic-project-creation.html) | 影片 | 了解讓專案上線執行的四個步驟、專案定義，以及最常見的三種專案建立方式。 |
-| 2023 年 5 月 | [更新結果和活動的進度](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/manage-goals/make-a-quantitative-update.html) | 影片 | 了解如何在 Workfront Goals 中更新結果和活動的進度。 |
-| 2023 年 5 月 | [填寫專案詳細資料](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/fill-in-the-project-details.html) | 文章 | 了解 Workfront 建議您在建立專案時要填寫的 12 個專案詳細資料欄位。 |
+| 2023 年 5 月 | [透過版面範本新增和管理圖釘](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/administration-and-setup/layout-templates/add-and-manage-pins-in-layout-template.html?lang=zh-Hant) | 影片 | 了解什麼是圖釘以及如何透過版面範本為一組使用者釘選重要或相關的頁面。 |
+| 2023 年 5 月 | [使用 Jira 整合建立可見度](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/integrations/jira/jira.html?lang=zh-Hant) | 文章 | 快速看一下 Jira 整合如何讓您查看團隊目前工作情況。 |
+| 2023 年 5 月 | [計算目標進度](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/monitor-goals/calculate-goal-progress.html?lang=zh-Hant) | 文章 | 了解如何在 Workfront Goals 中計算目標進度。 |
+| 2023 年 5 月 | [傳達目標狀態](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/monitor-goals/communicate-goal-status.html?lang=zh-Hant) | 文章 | 了解如何在 Workfront Goals 中將您目標進度和狀態傳達給他人。 |
+| 2023 年 5 月 | [了解增強型分析中的規劃時數和持續時間檢視](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/8-planned-hours-and-duration-views.html?lang=zh-Hant) | 文章 | 在燃盡圖和專案樹狀圖表中，您可以按規劃時數或持續時間查看資訊。 |
+| 2023 年 5 月 | [了解建立專案的四種方法](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/understand-other-ways-to-create-projects.html?lang=zh-Hant) | 影片 | 了解如何從範本建立專案、從頭開始建立專案、複製現有專案或匯入 Microsoft® Project 檔案。 |
+| 2023 年 5 月 | [尋找您的專案](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/find-projects.html?lang=zh-Hant) | 文章和影片 | 了解如何使用圖釘、我的最愛、儀表板和專案頁面，在 Workfront 中尋找您的專案。 |
+| 2023 年 5 月 | [了解增強型分析的動作 - 懸停、點按並拖曳以及點進](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/9-actions-hover-click-and-drag-and-click-in.html?lang=zh-Hant) | 影片 | 了解如何將滑鼠懸停在圖表上來取得更多資訊、在圖表上建立時間範圍，以及顯示其他圖表，全都在增強型分析中進行。 |
+| 2023 年 5 月 | [使用者的資源管理設定](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-resources/resource-management/settings-for-users.html?lang=zh-Hant) | 影片 | 了解正確使用資源管理工具所需的使用者設定。 |
+| 2023 年 5 月 | [Workfront Analytics 簡介](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/1-intro-to-workfront-analytics.html?lang=zh-Hant) | 影片 | 與增強分析產品經理 Joel Pettigrew 一起了解分析是如何產生的，以及它所帶來的令人興奮的功能。 |
+| 2023 年 5 月 | [更新要求](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/issues-requests/update-a-request.html?lang=zh-Hant) | 影片 | 了解如何查找您已提交的請求並在 Workfront 中更新這些請求。 |
+| 2023 年 5 月 | [了解圖表部分](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/monitor-goals/understand-the-graphs-section.html?lang=zh-Hant) | 影片 | 了解如何辨讀和解釋 Goals 中的目標健康圖表和目標進度圖表。 |
+| 2023 年 5 月 | [設定 Workfront Fusion 練習檔案](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/fusion/welcome-to-workfront-fusion/set-up-your-fusion-exercise-files-walkthrough.html?lang=zh-Hant) | 影片 | 了解如何在 Adobe Workfront Fusion 下載練習檔案，並將這些檔案上傳到 Workfront 的資料夾中。 |
+| 2023 年 5 月 | [共用專案](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/share-a-project.html?lang=zh-Hant) | 影片 | 了解如何共用專案，以便利害關係人和對專案感興趣的其他人可以使用 Workfront 查看完成的工作。 |
+| 2023 年 5 月 | [有關要求佇列的常見問題](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/request-queues/request-queue-faq.html?lang=zh-Hant) | 文章 | 取得 Workfront 中要求佇列常見問題的答案。 |
+| 2023 年 5 月 | [了解增強型分析中的團隊活動圖表](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/18-activity-by-team-chart.html?lang=zh-Hant) | 文章 | 在 Workfront 中了解您組織的主團隊時間使用情況。 |
+| 2023 年 5 月 | [完成目標後關閉目標](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/manage-goals/close-a-goal-once-complete.html?lang=zh-Hant) | 影片 | 了解如何使用 [!UICONTROL Goals] 關閉目標。 |
+| 2023 年 5 月 | [了解基本專案建立](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/understand-basic-project-creation.html?lang=zh-Hant) | 影片 | 了解讓專案上線執行的四個步驟、專案定義，以及最常見的三種專案建立方式。 |
+| 2023 年 5 月 | [更新結果和活動的進度](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/manage-goals/make-a-quantitative-update.html?lang=zh-Hant) | 影片 | 了解如何在 Workfront Goals 中更新結果和活動的進度。 |
+| 2023 年 5 月 | [填寫專案詳細資料](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/fill-in-the-project-details.html?lang=zh-Hant) | 文章 | 了解 Workfront 建議您在建立專案時要填寫的 12 個專案詳細資料欄位。 |
 
 {style="table-layout:auto"}
 
@@ -600,12 +600,12 @@ Experience League 上的新的 [!DNL Workfront] 課程與教學課程系列。
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 4 月 | [無法編輯自訂欄位](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21913.html) | 新文章 | 了解如何解決使用者在編輯自訂欄位時遇到的問題。 |
+| 2023 年 4 月 | [無法編輯自訂欄位](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21913.html?lang=zh-Hant) | 新文章 | 了解如何解決使用者在編輯自訂欄位時遇到的問題。 |
 
 {style="table-layout:auto"}
 
 
-請參閱 [[!DNL Workfront] 產品版本](https://experienceleague.adobe.com/docs/workfront/using/product-announcements/product-releases/product-releases.html)頁面，以取得所有產品的最新資訊匯總。
+請參閱 [[!DNL Workfront] 產品版本](https://experienceleague.adobe.com/docs/workfront/using/product-announcements/product-releases/product-releases.html?lang=zh-Hant)頁面，以取得所有產品的最新資訊匯總。
 
 +++
 
@@ -670,8 +670,8 @@ Last updated: **August 9, 2022**
 
 | 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
-| 2023 年 5 月 | [Acrobat Sign + Workday 新員工入職培訓](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/workday/acrobat-sign-workday-onboarding.html) | 影片 | 您可以在組織已經使用的其他應用程式中使用 Acrobat Sign，例如 Microsoft、Salesforce、Workday 和 Marketo 等等。在這些整合指南和教學課程中了解如何簡化電子簽名工作流程。 | Acrobat Sign |
-| 2023 年 5 月 | [傳送文件進行公證](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/notarize/send-document-notarize.html) | 影片 | 了解如何傳送文件進行公證。 | Acrobat Sign |
+| 2023 年 5 月 | [Acrobat Sign + Workday 新員工入職培訓](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/workday/acrobat-sign-workday-onboarding.html?lang=zh-Hant) | 影片 | 您可以在組織已經使用的其他應用程式中使用 Acrobat Sign，例如 Microsoft、Salesforce、Workday 和 Marketo 等等。在這些整合指南和教學課程中了解如何簡化電子簽名工作流程。 | Acrobat Sign |
+| 2023 年 5 月 | [傳送文件進行公證](https://experienceleague.adobe.com/docs/document-cloud-learn/sign-learning-hub/integrations/notarize/send-document-notarize.html?lang=zh-Hant) | 影片 | 了解如何傳送文件進行公證。 | Acrobat Sign |
 
 {style="table-layout:auto"}
 
@@ -691,29 +691,29 @@ New videos, tutorials, or courses published for [!DNL Creative Cloud] for enterp
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|January 2023|[Professional motion graphics templates](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/videooverview/videotutorials/motion-graphics-templates.html)|PDF tutorial|Using the Essential Graphics workflow in Adobe After Effects and Adobe Premiere Pro, editors can import MOGRTs and set properties. Properties include text, fonts, color, size, speed, or layout editable, while maintaining the sequence's consistent look and design.|
-|January 2023|[Collaboration: The Future of Creativity](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/cceoverview/ccetutorials/collaboration-the-future-of-creativity.html)|PDF tutorial |Get free access to more than 20,000 professionally designed and curated fonts from Adobe Fonts. Originally known as Typekit, Adobe Fonts are available through a single licensing agreement that gives designers unlimited creative use for personal or commercial projects.|
-|January 2023|[3D design and rendering](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/3doverview/3dtutorials/substance-3d-stager.html)|PDF tutorial |Import content, arrange your scene, apply materials and textures, adjust image-based and physical lighting, save cameras with different resolutions, and render photorealistic imagery - all in Adobe Substance 3D Stager.|
-|January 2023|[Adobe Express: Content that stands out](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/cceoverview/ccetutorials/adobe-express-content-that-stands-out.html)|PDF tutorial |Create beautiful graphics, web pages, and video stories in minutes with Adobe Express (formerly known as Adobe Spark). Working from thousands of professionally designed templates, make social posts and stories, flyers, logos, booklets, posters, and more. Start for free, and make content that always stands out.|
+|January 2023|[Professional motion graphics templates](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/videooverview/videotutorials/motion-graphics-templates.html?lang=zh-Hant)|PDF tutorial|Using the Essential Graphics workflow in Adobe After Effects and Adobe Premiere Pro, editors can import MOGRTs and set properties. Properties include text, fonts, color, size, speed, or layout editable, while maintaining the sequence's consistent look and design.|
+|January 2023|[Collaboration: The Future of Creativity](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/cceoverview/ccetutorials/collaboration-the-future-of-creativity.html?lang=zh-Hant)|PDF tutorial |Get free access to more than 20,000 professionally designed and curated fonts from Adobe Fonts. Originally known as Typekit, Adobe Fonts are available through a single licensing agreement that gives designers unlimited creative use for personal or commercial projects.|
+|January 2023|[3D design and rendering](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/3doverview/3dtutorials/substance-3d-stager.html?lang=zh-Hant)|PDF tutorial |Import content, arrange your scene, apply materials and textures, adjust image-based and physical lighting, save cameras with different resolutions, and render photorealistic imagery - all in Adobe Substance 3D Stager.|
+|January 2023|[Adobe Express: Content that stands out](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/cceoverview/ccetutorials/adobe-express-content-that-stands-out.html?lang=zh-Hant)|PDF tutorial |Create beautiful graphics, web pages, and video stories in minutes with Adobe Express (formerly known as Adobe Spark). Working from thousands of professionally designed templates, make social posts and stories, flyers, logos, booklets, posters, and more. Start for free, and make content that always stands out.|
 
 {style="table-layout:auto"} 
 
-See [Creative Cloud for enterprise tutorials](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/overview.html) for the latest tutorials.
+See [Creative Cloud for enterprise tutorials](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/overview.html?lang=zh-Hant) for the latest tutorials.
 
 +++
 -->
 
 <!-- ## ![Icon](/assets/experience-league.png) Customer Data Management - Voices {#voices}
 
-[Customer Data Management Voices](https://experienceleague.adobe.com/docs/customer-data-management-voices-events/events/overview.html) is your destination as a customer data management technical and marketing practice leader and specialist. This collection of tutorials is your one-stop-shop to hear from your peers, get inspired, and learn about developments in MarTech. No registration required, simply click and watch.
+[Customer Data Management Voices](https://experienceleague.adobe.com/docs/customer-data-management-voices-events/events/overview.html?lang=zh-Hant) is your destination as a customer data management technical and marketing practice leader and specialist. This collection of tutorials is your one-stop-shop to hear from your peers, get inspired, and learn about developments in MarTech. No registration required, simply click and watch.
 
 ## Digital Experience Blueprints {#blueprints}
 
-[Digital Experience Blueprints](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/overview.html) are repeatable implementations that let you address strategy and quickly solve established business problems. Each Blueprint provides a series of artifacts that explain the high-value business problem, architectures, implementation steps, technical considerations, and links to the relevant documentation.
+[Digital Experience Blueprints](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/overview.html?lang=zh-Hant) are repeatable implementations that let you address strategy and quickly solve established business problems. Each Blueprint provides a series of artifacts that explain the high-value business problem, architectures, implementation steps, technical considerations, and links to the relevant documentation.
 
 ### New Digital Experience Blueprints tutorials
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|January 2023|[Customer Journeys - AEP + Apps & AJO Architecture](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/customer-journeys/overview.html)|Diagram updates|Deliver individual, just-in-time customer experiences across screens.| 
+|January 2023|[Customer Journeys - AEP + Apps & AJO Architecture](https://experienceleague.adobe.com/docs/blueprints-learn/architecture/customer-journeys/overview.html?lang=zh-Hant)|Diagram updates|Deliver individual, just-in-time customer experiences across screens.| 
 -->
